--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>SVG Sprite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://pawan418.github.io/lspl-icon/lspl-icon.css">
   <script type="text/javascript" src="https://pawan418.github.io/lspl-icon/lspl-icon.js"></script>
 </head>
